tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_duplicate_declaration/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Duplicate definitions of trait definition with name Default2 found
   ┌─ src/main.nr:2:11
   │
 2 │     trait Default2 {
   │           -------- First trait definition found here
   ·
17 │     trait Default2 {
   │           -------- Second trait definition found here
   │

Aborting due to 1 previous error
